Update the cs100_introduction with the correct background images.

--- a/cs100_introduction.html
+++ b/cs100_introduction.html
@@ -42,13 +42,13 @@
 
       <div class="slides">
 
-        <section data-background-transition="none" data-background="https://images.unsplash.com/photo-1528901166007-3784c7dd3653" style="background: rgba(29,31,33,0.9)">
+        <section data-background-transition="none" data-background="https://live.staticflickr.com/2828/32740378883_88ec4d5b72_b.jpg" style="background: rgba(29,31,33,0.9)">
           <h1>Computer Science 100</h1>
           <h2>Computational Expression</h2>
           <p>Gregory M. Kapfhammer</p>
         </section>
 
-        <section data-background-transition="none" data-background="https://images.unsplash.com/photo-1528901166007-3784c7dd3653" style="background: rgba(29,31,33,0.9)">
+        <section data-background-transition="none" data-background="https://live.staticflickr.com/2828/32740378883_88ec4d5b72_b.jpg" style="background: rgba(29,31,33,0.9)">
           <h1>Keep in Touch!</h1>
           <p class="fragment">Office Hours</p>
           <p class="fragment">Email</p>
