Add the slide about context to the cs100_chapter1.

--- a/cs100_chapter1.html
+++ b/cs100_chapter1.html
@@ -66,6 +66,10 @@
         </section>
 
         <section>
+          <h1>Let's develop some context!</h1>
+        </section>
+
+        <section>
           <h1>Computer Hardware</h1>
           <p class="fragment">Central processing unit (CPU)</p>
           <p class="fragment">Input/output devices (I/O) </p>
