--- a/cs100_chapter1.html
+++ b/cs100_chapter1.html
@@ -66,7 +66,7 @@
         </section>
 
         <section>
-          <h1>Let's develop some context!</h1>
+          <h1>Let's create some context!</h1>
         </section>
 
         <section>
