Reorder the slides in the cs100_chapter1.

--- a/cs100_chapter1.html
+++ b/cs100_chapter1.html
@@ -58,15 +58,19 @@
         </section>
 
         <section>
+          <h1>Programming and problem solving</h1>
+        </section>
+
+        <section>
+          <h1>Let's create some context!</h1>
+        </section>
+
+        <section>
           <h1>What is inside of a computer?</h1>
         </section>
 
         <section>
           <h1>How does a computer work?</h1>
-        </section>
-
-        <section>
-          <h1>Let's create some context!</h1>
         </section>
 
         <section>
