Add more signposting slides to the cs100_chapter1.

--- a/cs100_chapter1.html
+++ b/cs100_chapter1.html
@@ -145,6 +145,18 @@
         </section>
 
         <section>
+          <h1>Writing Computer Programs</h1>
+        </section>
+
+        <section>
+          <h1>Reading Computer Programs</h1>
+        </section>
+
+        <section>
+          <h1>Let's learn to read!</h1>
+        </section>
+
+        <section>
           <h1 >Java Programs</h1>
           <pre><code data-trim>
 public class Lincoln
