Revise and reorganize and add new slides to the cs100_chapter2.

--- a/cs100_chapter2.html
+++ b/cs100_chapter2.html
@@ -68,6 +68,10 @@
         </section>
 
         <section>
+          <h1><b class="orange">Program Variables</b></h1>
+        </section>
+
+        <section>
           <h1 id="variables">Variables</h1>
           <p class="fragment">Types</p>
           <p class="fragment">Declaration</p>
@@ -103,26 +107,7 @@
         </section>
 
         <section>
-          <h1><b class="orange">Using GitHub and Docker</b></h1>
-        </section>
-
-        <section>
-          <h1><b class="orange">Needs correctly configured laptop</b></h1>
-        </section>
-
-        <section>
-          <h1 id="let's_try_it!">Let's Try It!</h1>
-          <h3><b class="red">Write one Java program that declares variables of the following types</b></h3>
-          <p class="fragment"><code>int</code>, <code>double</code>, <code>float</code>, <code>boolean</code>, <code>char</code>, <code>String</code></p>
-          <p class="fragment">Give each of the variables a suitable <b class="orange">default</b> value</p>
-          <p class="fragment">Use a <code>println</code> statement to display all of the values</p>
-          <p class="fragment">Add a single-line comment to the source code</p>
-          <p class="fragment">See the README file for full details about the requirements</p>
-          <p class="fragment">If this does not work, make sure to fix your program!</p>
-        </section>
-
-        <section>
-          <h1><b class="green">What were your experiences?</b></h1>
+          <h1><b class="green">Any questions about variables?</b></h1>
         </section>
 
         <section data-background-transition="none" data-background="https://farm2.static.flickr.com/1228/1023015396_9cfff2939d.jpg" style="">
@@ -180,6 +165,33 @@
         </section>
 
         <section>
+          <h1><b class="orange">Let's Try It!</b></h1>
+        </section>
+
+        <section>
+          <h1><b class="orange">Using GitHub and Docker</b></h1>
+        </section>
+
+        <section>
+          <h1><b class="orange">Needs correctly configured laptop</b></h1>
+        </section>
+
+        <section>
+          <h1 id="let's_try_it!">Let's Try It!</h1>
+          <h3><b class="red">Write one Java program that declares variables of the following types</b></h3>
+          <p class="fragment"><code>int</code>, <code>double</code>, <code>float</code>, <code>boolean</code>, <code>char</code>, <code>String</code></p>
+          <p class="fragment">Give each of the variables a suitable <b class="orange">default</b> value</p>
+          <p class="fragment">Use a <code>println</code> statement to display all of the values</p>
+          <p class="fragment">Add a single-line comment to the source code</p>
+          <p class="fragment">See the README file for full details about the requirements</p>
+          <p class="fragment">If this does not work, make sure to fix your program!</p>
+        </section>
+
+        <section>
+          <h1><b class="green">What were your experiences?</b></h1>
+        </section>
+
+        <section>
           <h1>Let's Try It!</h1>
           <p class="fragment"><b class="orange">Refresh your in-class GitHub repository</b></p>
           <p class="fragment">git remote add download git@github.com:Allegheny-Computer-Science-100-F2019/cs100-F2019-inclass-starter.git</p>
@@ -192,7 +204,7 @@
         <!-- NOTE: The slides about computer graphics have now moved to the next chapter after textbook update -->
 
         <section>
-          <h1><b class="green">Any questions about this example?</b></h1>
+          <h1><b class="green">Any questions about these example?</b></h1>
         </section>
 
         <section>
