--- a/cs100_chapter3.html
+++ b/cs100_chapter3.html
@@ -156,13 +156,29 @@
         </section>
 
         <section>
+          <h1><b class="orange">Let's Try It!</b></h1>
+        </section>
+
+        <section>
+          <h1><b class="orange">Using GitHub and Docker</b></h1>
+        </section>
+
+        <section>
+          <h1><b class="orange">Needs correctly configured laptop</b></h1>
+        </section>
+
+        <section>
           <h1>Let's Try It!</h1>
           <p class="fragment"><b class="orange">String "mutations" change the content of strings</b></p>
-          <p class="fragment"><b class="orange">git pull download master</b></p>
+          <p class="fragment">git pull download master</p>
           <p class="fragment"><b class="orange">Ensure that your merge worked correctly</b></p>
           <p class="fragment"><b class="red">Finish the program from Listing 3.1 on page 106</b></p>
           <p class="fragment"><b class="red">Ensure that the program produces the correct output</b></p>
           <p class="fragment"><b class="green">Can you explain the output of this program?</b></p>
+        </section>
+
+        <section>
+          <h1><b class="orange">Organize our data types</b></h1>
         </section>
 
         <section>
