Revise the slides in the cs100_chapter2 to clarify in-class programming.

--- a/cs100_chapter2.html
+++ b/cs100_chapter2.html
@@ -177,14 +177,18 @@
         </section>
 
         <section>
+          <h1><b class="orange">Use a departmental desktop</b></h1>
+        </section>
+
+        <section>
           <h1 id="let's_try_it!">Let's Try It!</h1>
-          <h3><b class="red">Write one Java program that declares variables of the following types</b></h3>
+          <h3><b class="red">Enhance one Java program that declares variables of the following types</b></h3>
           <p class="fragment"><code>int</code>, <code>double</code>, <code>float</code>, <code>boolean</code>, <code>char</code>, <code>String</code></p>
           <p class="fragment">Give each of the variables a suitable <b class="orange">default</b> value</p>
-          <p class="fragment">Use a <code>println</code> statement to display all of the values</p>
+          <p class="fragment">Use a <code>println</code> statement to each variable</p>
           <p class="fragment">Add a single-line comment to the source code</p>
           <p class="fragment">See the README file for full details about the requirements</p>
-          <p class="fragment">If this does not work, make sure to fix your program!</p>
+          <p class="fragment">Make sure to fix the program so that it passes all checks!</p>
         </section>
 
         <section>
@@ -193,12 +197,12 @@
 
         <section>
           <h1>Let's Try It!</h1>
-          <p class="fragment"><b class="orange">Refresh your in-class GitHub repository</b></p>
-          <p class="fragment">git remote add download git@github.com:Allegheny-Computer-Science-100-F2019/cs100-F2019-inclass-starter.git</p>
-          <p class="fragment">git pull download master</p>
+          <p class="fragment"><b class="orange">Return to your in-class GitHub repository</b></p>
           <p class="fragment"><b class="green">What is the output of this program?</b></p>
           <p class="fragment"><b class="green">How does this program use the Scanner class?</b></p>
           <p class="fragment"><b class="red">Use comments to explain how <code>ComputeGasMileage.java</code> works</b></p>
+          <p class="fragment">See the README file for full details about the requirements</p>
+          <p class="fragment">Make sure to fix the program so that it passes all checks!</p>
         </section>
 
         <!-- NOTE: The slides about computer graphics have now moved to the next chapter after textbook update -->
