Update the cs100_chapter2 to give details about in-class programming.

--- a/cs100_chapter2.html
+++ b/cs100_chapter2.html
@@ -212,6 +212,10 @@
         </section>
 
         <section>
+          <h1><b class="orange">Finish the in-class programming in about a week</b></h1>
+        </section>
+
+        <section>
           <h1><b class="orange">Work to achieve learning objectives</b></h1>
         </section>
 
