--- a/cs100_chapter2.html
+++ b/cs100_chapter2.html
@@ -208,7 +208,7 @@
         <!-- NOTE: The slides about computer graphics have now moved to the next chapter after textbook update -->
 
         <section>
-          <h1><b class="green">Any questions about these example?</b></h1>
+          <h1><b class="green">Any questions about these examples?</b></h1>
         </section>
 
         <section>
