Update cs100_chapter3 slides to explain the in-class programming better.

--- a/cs100_chapter3.html
+++ b/cs100_chapter3.html
@@ -168,13 +168,22 @@
         </section>
 
         <section>
+          <h1><b class="orange">Use a departmental desktop</b></h1>
+        </section>
+
+        <section>
           <h1>Let's Try It!</h1>
           <p class="fragment"><b class="orange">String "mutations" change the content of strings</b></p>
-          <p class="fragment">git pull download master</p>
+          <p class="fragment"><b class="orange">Follow instructions in the README for your repository</b></p>
+          <p class="fragment"><b class="orange">Look on the screen for additional commands to try</b></p>
           <p class="fragment"><b class="orange">Ensure that your merge worked correctly</b></p>
           <p class="fragment"><b class="red">Finish the program from Listing 3.1 on page 106</b></p>
           <p class="fragment"><b class="red">Ensure that the program produces the correct output</b></p>
           <p class="fragment"><b class="green">Can you explain the output of this program?</b></p>
+        </section>
+
+        <section>
+          <h1><b class="green">Any questions about this example?</b></h1>
         </section>
 
         <section>
