--- a/cs100_chapter3.html
+++ b/cs100_chapter3.html
@@ -239,7 +239,7 @@
         </section>
 
         <section>
-          <h1><b class="orange">Work to master learning objectives</b></h1>
+          <h1><b class="orange">Aim to master technical skills</b></h1>
         </section>
 
         <section>
