--- a/cs100_chapter3.html
+++ b/cs100_chapter3.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Computer Science 100: Data Abstraction</title>
+    <title>Computer Science 100: Computational Expression</title>
 
     <meta name="description" content="Teaching Slides for Computer Science 100">
     <meta name="author" content="Gregory M. Kapfhammer">
