Update the cs100_chapter5.

--- a/cs100_chapter5.html
+++ b/cs100_chapter5.html
@@ -244,15 +244,19 @@
         </section>
 
         <section>
-          <h1><b class="red">Make sure to complete the inclass programming!</b></h1>
+          <h1><b class="orange">We will practice these concepts</b></h1>
         </section>
 
         <section>
-          <h1><b class="orange">Work to master learning objectives</b></h1>
+          <h1><b class="orange">Aim to master technical skills</b></h1>
         </section>
 
         <section>
           <h1><b class="orange">Schedule meeting during office hours</b></h1>
+        </section>
+
+        <section>
+          <h1><b class="red">Finish the in-class examples soon</b></h1>
         </section>
 
       </div>
