Update several sections of the whystudycomputerscience.

--- a/whystudycomputerscience.html
+++ b/whystudycomputerscience.html
@@ -49,15 +49,30 @@
         </section>
 
         <section>
-          <h1 id="why_should_you_study_computer_science?">Why Should You Study Computer Science?</h1>
+          <h1><b class="orange">Wait, where are the computers?</b></h1>
         </section>
 
         <section>
-          <h1 id="become_an_active_creator_of_valued_technology">Become an Active Creator of Valued Technology</h1>
+          <h1>Software Everywhere</h1>
+          <p class="fragment">Education</p>
+          <p class="fragment">Arts</p>
+          <p class="fragment">Finance</p>
+          <p class="fragment">Entertainment</p>
         </section>
 
         <section>
-          <h1 id="take_on_a_rewarding_intellectual_challenging">Take on a Rewarding Intellectual Challenge</h1>
+          <h1><b class="orange">Software really <em>is</em> everywhere!</b></h1>
+        </section>
+
+        <section>
+          <h1><b class="orange">What are the implications?</b></h1>
+        </section>
+
+        <section>
+          <h1>Software Everywhere</h1>
+          <p class="fragment">Career Outlook</p>
+          <p class="fragment">Education Strategy</p>
+          <p class="fragment">Technology Decisions</p>
         </section>
 
         <section>
@@ -118,6 +133,10 @@
           <p class="fragment">Branch out into many fields</p>
           <p class="fragment">Change the world</p>
           <br /><small><a href="https://creativecommons.org/licenses/by-nc-nd/2.0/">creative commons licensed ( BY-NC-ND )</a> <a title="Haddie Cooke & Dan Benjamin of 5by5 Studios at the Panic Software HQ" href="https://flickr.com/photos/laughingsquid/8047457525">flickr photo</a> shared by <a href="https://flickr.com/people/laughingsquid">Scott Beale</a></small>
+        </section>
+
+        <section>
+          <h1><b class="orange">Everyone should study computer science!</b></h1>
         </section>
 
       </div>
