Add details about strategy to the whystudycomputerscience.

--- a/whystudycomputerscience.html
+++ b/whystudycomputerscience.html
@@ -139,6 +139,26 @@
           <h1><b class="orange">Everyone should study computer science!</b></h1>
         </section>
 
+        <section>
+          <h1>Education Strategy</h1>
+          <p class="fragment">Real-world technology</p>
+          <p class="fragment">Student laptops</p>
+          <p class="fragment">Realistic teamwork</p>
+          <p class="fragment">Effective communication</p>
+        </section>
+
+        <section>
+          <h1><b class="orange">Case Study: GitHub</b></h1>
+        </section>
+
+        <section>
+          <h1><b class="orange">Case Study: Docker</b></h1>
+        </section>
+
+        <section>
+          <h1><b class="orange">Case Study: GatorGrader</b></h1>
+        </section>
+
       </div>
 
       <script src="lib/js/head.min.js"></script>
