Add many of the final slides in the whystudycomputerscience.

--- a/whystudycomputerscience.html
+++ b/whystudycomputerscience.html
@@ -148,6 +148,10 @@
         </section>
 
         <section>
+          <h1><b class="green">What types of technology should we use?</b></h1>
+        </section>
+
+        <section>
           <h1><b class="orange">Case Study: GitHub</b></h1>
         </section>
 
@@ -157,6 +161,22 @@
 
         <section>
           <h1><b class="orange">Case Study: GatorGrader</b></h1>
+        </section>
+
+        <section>
+          <h1>Course workflow</h1>
+          <p class="fragment">Laboratory assignments</p>
+          <p class="fragment">Practical assignments</p>
+          <p class="fragment">Portfolio projects</p>
+          <p class="fragment">Team-based projects</p>
+        </section>
+
+        <section>
+          <h1>Example Courses</h1>
+          <p class="fragment">Artificial Intelligence</p>
+          <p class="fragment">Data Analytics</p>
+          <p class="fragment">Software Engineering</p>
+          <p class="fragment">Bioinformatics</p>
         </section>
 
       </div>
