--- a/whystudycomputerscience.html
+++ b/whystudycomputerscience.html
@@ -179,6 +179,14 @@
           <p class="fragment">Bioinformatics</p>
         </section>
 
+        <section>
+          <h1><b class="orange">It's a great time to study computer science!</b></h1>
+        </section>
+
+        <section>
+          <h1><b class="green">Thanks for attending! Any questions?</b></h1>
+        </section>
+
       </div>
 
       <script src="lib/js/head.min.js"></script>
