Add details and enhance existing content in the cs100_chapter6.

--- a/cs100_chapter6.html
+++ b/cs100_chapter6.html
@@ -106,11 +106,14 @@
         </section>
 
         <section>
-          <h1 id="printing_stars">Printing Stars</h1>
+          <h1 id="printing_stars">Display Stars</h1>
+          <p class="fragment"><b class="orange">Download the <code>DisplayStars.java</code> program</b></p>
           <p class="fragment"><b class="orange">This program uses iteration constructs</b></p>
-          <p class="fragment"><b class="orange">We will investigate this program during a practical</b></p>
+          <p class="fragment"><b class="orange">We will further investigate this program during a practical</b></p>
           <p class="fragment"><b class="green">Do you understand how to this program works?</b></p>
           <p class="fragment"><b class="green">Could you extend this program with new loops?</b></p>
+          <p class="fragment"><b class="red">Document each part of the code</b></p>
+          <p class="fragment"><b class="red">Provide the output for the program at the bottom</b></p>
         </section>
 
         <section>
@@ -128,7 +131,7 @@
 
         <section>
           <h1 id="extra">Extra Fun</h1>
-          <p class="fragment"><b class="red">Create a program called <code>PrintStatusBar.java</code></b></p>
+          <p class="fragment"><b class="red">Try to create your own program called <code>PrintStatusBar.java</code></b></p>
           <p class="fragment"><b class="red">The program should accept two command-line arguments</b></p>
           <p class="fragment"><b class="red">The first input should be the number of printed symbols</b></p>
           <p class="fragment"><b class="red">The second input should be the printed symbols</b></p>
